--- a/.github/workflows/build-images-production.yml
+++ b/.github/workflows/build-images-production.yml
@@ -52,7 +52,7 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/myopia-base:${{ github.event.inputs.tag_version }}
             ghcr.io/${{ github.repository_owner }}/myopia-base:latest
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           build-args: |
             APP_VERSION=${{ github.event.inputs.tag_version }}
 
@@ -78,6 +78,9 @@ jobs:
             }
           }
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -97,7 +100,7 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/myopia-api:${{ github.event.inputs.tag_version }}
             ghcr.io/${{ github.repository_owner }}/myopia-api:latest
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           build-args: |
             APP_VERSION=${{ github.event.inputs.tag_version }}
 
@@ -123,6 +126,9 @@ jobs:
             }
           }
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -142,6 +148,6 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/myopia-worker:${{ github.event.inputs.tag_version }}
             ghcr.io/${{ github.repository_owner }}/myopia-worker:latest
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           build-args: |
             APP_VERSION=${{ github.event.inputs.tag_version }}
